--- a/amplify.yml
+++ b/amplify.yml
@@ -18,5 +18,7 @@ backend:
   phases:
     build:
       commands:
-        - '# Execute Amplify CLI with the helper script'
+        - amazon-linux-extras install python3.8
+        - ln -fs /usr/bin/python3.8 /usr/bin/python3
+        - pip3.8 install pipenv
         - amplifyPush --simple
