Removing depenency on aws-exports.js for the moment, to have a running build

--- a/amplify.yml
+++ b/amplify.yml
@@ -4,10 +4,10 @@ backend:
     build:
       commands:
         - amazon-linux-extras install python3.8
-        - ln -fs /usr/bin/python3.8 /usr/bin/python3
-        - pip3.8 install pipenv
-        - npm install -g @aws-amplify/cli
-        - amplifyPush --simple
+        # - ln -fs /usr/bin/python3.8 /usr/bin/python3
+        # - pip3.8 install pipenv
+        # - npm install -g @aws-amplify/cli
+        # - amplifyPush --simple
 frontend:
   phases:
     preBuild:
