--- a/amplify.yml
+++ b/amplify.yml
@@ -17,7 +17,7 @@ frontend:
       commands:
         - npm run build
   artifacts:
-    baseDirectory: out
+    baseDirectory: .next
     files:
       - '**/*'
   cache:
