--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/icons": "^4.11.2",
     "aws-amplify": "^3.3.12",
     "next": "10.0.3",
+    "next-google-fonts": "^1.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
