--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "10.0.3",
     "next-google-fonts": "^1.2.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "swr": "^0.3.9"
   }
 }
